--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   mysql:
-    image: jbergstroem/mariadb-alpine:10.4.17
+    image: mariadb:10.4.18
     hostname: mysql
     container_name: mysql
     environment:
