Add tests and reporting

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -12,4 +12,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Make
-        run: make build
+        run: make build test
+      - name: Publish Unit Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v1
+        if: always()
+        with:
+          files: test-results/**/*.xml
