--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          submodules: true
       - name: Make
         run: make build test
       - name: Publish Unit Test Results
