--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          submodules: recurse
+          submodules: recursive
       - name: Make
         run: make build test
       - name: Publish Unit Test Results
