--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           submodules: recursive
       - name: Make
-        run: make build test
+        run: make build test push
       - name: Publish Unit Test Results
         uses: EnricoMi/publish-unit-test-result-action@v1
         if: always()
