--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -9,7 +9,7 @@ jobs:
     env:
       SLURM_TAG: ${{ matrix.slurm-tag }}
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
